[package]
name = "sc-transaction-pool"
version = "39.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk.git"
description = "Substrate transaction pool implementation."
readme = "README.md"

#[lints]
#workspace = true
#
#[package.metadata.docs.rs]
#targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { version = "0.1.88" }
codec = { version = "3.7.4",  features = ["derive", "std"], package = "parity-scale-codec" }
futures = { version = "0.3.31" }
futures-timer = { version = "3.0.2" }
indexmap = { version = "2.7.1" }
itertools = { version = "0.11" }
linked-hash-map = { version = "0.5.4" }
log = { version = "0.4.22", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
prometheus-endpoint  = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-6", default-features = true, version = "0.17.0", package = "substrate-prometheus-endpoint" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-6", default-features = true }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-6", default-features = true }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-6", default-features = true }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-6", default-features = true }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-6", default-features = true }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-6", default-features = true }
sp-crypto-hashing = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-6", default-features = true }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-6", default-features = true }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-6", default-features = true }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2503-6", default-features = true }
serde = { version = "1.0.214", features = ["derive"], default-features = false }
thiserror = { version = "1.0.64" }
tokio = { version = "1.45.0", features = ["macros", "time", "net"], default-features = true }
tokio-stream = { version = "0.1.14" }
tracing = { version = "0.1.37", default-features = false }

#[dev-dependencies]
#anyhow = { workspace = true }
#assert_matches = { workspace = true }
#criterion = { workspace = true, default-features = true }
#sc-block-builder = { default-features = true, workspace = true }
#sp-consensus = { default-features = true, workspace = true }
#substrate-test-runtime = { workspace = true }
#substrate-test-runtime-client = { workspace = true }
#substrate-test-runtime-transaction-pool = { workspace = true }
#thiserror = { workspace = true }
#tokio = { workspace = true, features = ["rt-multi-thread"] }
#tracing-subscriber = { workspace = true }
#txtesttool = { workspace = true }
#zombienet-sdk = { workspace = true }
#
#[[bench]]
#name = "basics"
#harness = false